# anchored_representation_clouds

./: .gitignore  README.md  pyproject.toml  sbatch_submitter.py  utils_platform.py  utils_visual.py
configs/: arc_config_core.py  sample_config.py  siren_config_core.py
configs/example_downstream_classification/: ptv3_fmnist_fullaugment_bs1024_large.py
data/: dataset_image.py  dataset_ptv3.py  utils.py  utils_mnist.py  utils_ptv3.py
models_arc/: arc.py  distance_transforms.py  latents_position.py  samplers.py
models_baselines/: mlp.py  siren_correct.py  siren_dwsnets.py
models_downstream/: ptv3_mine.py
tasks/: arc_helpers.py  fit_inrs.py  train_ptv3.py
